--- a/stats2.qmd
+++ b/stats2.qmd
@@ -33,7 +33,7 @@ The relatively small differences between the interim products and the legacy pro
 
 To access datasets used in the statistical analysis, find it in [User Resources](user_resources.qmd#download-statistical-analysis-data-products).
 
-## Unbiased Relative Difference (&psi;) {#psi}
+## Unbiased Relative Difference {#psi}
 
 In plain language, Unbiased Relative Difference (&psi;) is the difference between interim and legacy primary productivity values (netPP), normalized to the mean of the two values. Normalizing to the mean avoids the bias of arbitrarily selecting one product as the reference. For a detailed explanation of the calculation, see the [Appendix](#psi_appendix). This analysis allows us to determine how similar netPP values are between the interim and legacy products.
 
