--- a/index.qmd
+++ b/index.qmd
@@ -48,15 +48,19 @@ The two interim product lines are routinely produced and are available online as
 <ul>
   <li><a>VIIRS SNPP Interim Primary Productivity</a></li>
     <ul>
-      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily.graph">Daily Composites</a></li>
-      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_monthly.graph">Monthly Composites</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily_nrt.graph">Daily Composites, Near Real-time</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily.graph">Daily Composites, Science Quality</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_monthly.graph">Monthly Composites, Science Quality</a></li>
     </ul>
   <li><a>VIIRS NOAA-20 Interim Primary Productivity</a></li>
     <ul>
-      <li><a href="https://example.com">Daily Composites</a></li>
-      <li><a href="https://example.com">Monthly Composites</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_daily_nrt.graph">Daily Composites, Near Real-time</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_daily.graph">Daily Composites, Science Quality</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_monthly.graph">Monthly Composites, Science Quality</a></li>
     </ul>
 </ul>
+
+
 
 ## Project Team and Funding
 <p>The project team included Dale Robinson, Cara Wilson, Sunny Hospital, Veronica Lance, Johnathon Sherman, Ryan Rykaczewski, Andrea Vander Woude, Menghua Wang, and Melanie Abecassis associated with NOAA CoastWatch; Kim Hyde from NOAA Southeast Fisheries Science Center; and Ryan Vandermeulen from the NOAA National Marine Fisheries Service.</p>
@@ -67,4 +71,4 @@ The two interim product lines are routinely produced and are available online as
 
 
 ## References
-<a href="https://doi.org/10.4319/lo.1997.42.1.0001">Behrenfeld and Falkowski. (1997) Photosynthetic rates derived from satellite-based chlorophyll concentration Limnol. Oceanogr. 42:1-20. </a></li>
+Behrenfeld and Falkowski. (1997) <a href="https://doi.org/10.4319/lo.1997.42.1.0001">Photosynthetic rates derived from satellite-based chlorophyll concentration.</a> Limnol. Oceanogr. 42:1-20. </li>
