--- a/stats2.qmd
+++ b/stats2.qmd
@@ -136,11 +136,11 @@ Tallying the values on the downward-sloping diagonal contingency matrix yields 8
 :::
 
 ## References
-<p><a href="https://www.sciencedirect.com/science/article/pii/S0034425717301426">Mélin, F., V. Vantrepotte, A. Chuprin, M. Grant, T. Jackson, and S. Sathyendranath. 2017. Assessing the fitness-for-purpose of satellite multi-mission ocean color climate data records: A protocol applied to OC-CCI chlorophyll- a data. Remote Sensing of Environment 203:139–151. </a></li></p>
+<p>Mélin, F., V. Vantrepotte, A. Chuprin, M. Grant, T. Jackson, and S. Sathyendranath. 2017. <a href="https://www.sciencedirect.com/science/article/pii/S0034425717301426">Assessing the fitness-for-purpose of satellite multi-mission ocean color climate data records: A protocol applied to OC-CCI chlorophyll- a data.</a> Remote Sensing of Environment 203:139–151. </li></p>
 
-<p><a href="https://pubmed.ncbi.nlm.nih.gov/15883903/">
-Viera, A. J., and J. M. Garrett. 2005. Understanding interobserver agreement: the kappa statistic. Family Medicine 37(5):360–363.
-</a></li></p>
+<p>Viera, A. J., and J. M. Garrett. 2005. <a href="https://pubmed.ncbi.nlm.nih.gov/15883903/">
+Understanding interobserver agreement: the kappa statistic.
+</a> Family Medicine 37(5):360–363.</li></p>
 
 ## Appendix
 
