--- a/user_resources.qmd
+++ b/user_resources.qmd
@@ -117,13 +117,15 @@ Generate trends for satellite-derived hourly means of legacy or interim primary 
 <ul>
   <li><a>VIIRS SNPP Interim Primary Productivity</a></li>
     <ul>
-      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily.graph">Daily Composites</a></li>
-      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_monthly.graph">Monthly Composites</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily_nrt.graph">Daily Composites, Near Real-time</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_daily.graph">Daily Composites, Science Quality</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_snpp_monthly.graph">Monthly Composites, Science Quality</a></li>
     </ul>
   <li><a>VIIRS NOAA-20 Interim Primary Productivity</a></li>
     <ul>
-      <li><a href="https://example.com">Daily Composites</a></li>
-      <li><a href="https://example.com">Monthly Composites</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_daily_nrt.graph">Daily Composites, Near Real-time</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_daily.graph">Daily Composites, Science Quality</a></li>
+      <li><a href="https://coastwatch.pfeg.noaa.gov/erddap/griddap/productivity_viirs_noaa20_monthly.graph">Monthly Composites, Science Quality</a></li>
     </ul>
 </ul>
 
